# hexKokkos

./: README.md
Test_1/: CMakeLists.txt  README.md  cond.cpp  cond.hxx  problem.md  py_cond_validation.py
Test_1/config/: spack.yaml
Test_1/data/: generate_matrix.py
Test_2_CPU_GPU/: CMakeLists.txt  README.md  Report.md  matvec.cpp  matvec.hxx  matvec_cublas.cu  matvec_kk.cpp  matvec_kk.hxx  problem.md
Test_2_CPU_GPU/data/: generate_dense.py  x.csv
Test_3_4/: CMakeLists.txt  Report.md  pcg.cpp  pcg.hxx
